discussion/kv_engine/128637/128637_rev19_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Make EPBucket::getFileStats use stats.def.h and StatCollector

Change-Id: I85e683edb403ac9a084df169396d76906791e501

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-07 14:20:58.000000000
Message: 
Uploaded patch set 19: Patch Set 18 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-07 14:47:00.000000000
Message: 
Patch Set 19: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3702/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:6: error: use of undeclared identifier "ep_db_data_size" [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:23: error: use of undeclared identifier "bytes" [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:30: error: expected expression [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:32: error: expected expression [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:34: error: expected expression [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:35: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(ep_db_data_size, bytes, , , )
                                  ^
                                  ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3702/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3702/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25529/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2217/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2020-08-08 21:40:30.000000000
Message: 
Patch Set 19:

This change is ready for review.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-08 22:06:25.000000000
Message: 
Patch Set 19:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29497/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\include\statistics\stat_units.h(85): error C2039: "string_view_literals": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29497/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12851/ : FAILURE

Compile error at [2020-08-08T21:48:51.891Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 33>::_Type {aka cb::stats::StatSpec [33]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12851/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4066/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4949/ : FAILURE

Compile error at [2020-08-08T21:49:04.937Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 33>::_Type {aka cb::stats::StatSpec [33]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4949/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5038/ : FAILURE

Compile error at [2020-08-08T21:42:57.128Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 33>::_Type {aka cb::stats::StatSpec [33]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5038/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5135/ : FAILURE

Compile error at [2020-08-08T21:47:13.472Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 33>::_Type {aka cb::stats::StatSpec [33]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5135/ )
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-08-10 15:41:25.000000000
Message: 
Patch Set 19: Code-Review-1

(1 comment)
Line:2786, engines/ep/src/ep_engine.cc -> Nit: Seems like this could have it's scope reduced, given it's not used until like 2790.

----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2020-08-25 09:21:45.000000000
Message: 
Patch Set 19:

(1 comment)
Line:2786, engines/ep/src/ep_engine.cc -> Done

----------------------------------------------------------------------------------------------------------------------
